fix navbar overlap on mobile

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin: 0px 40px;
+  margin: 40px 40px;
   align-content: space-around;
 }
 
@@ -139,6 +139,11 @@
     width: 100%;
     border-bottom: solid 2px black;
   }
+
+  .navbar.navbar-mobile {
+    border-bottom: none;
+  }
+
 
   #navbar__logo .logo {
     margin-left: 20px;
